--- a/DrumStick/styles.css
+++ b/DrumStick/styles.css
@@ -17,32 +17,35 @@ footer {
 }
 
 .w {
+  background-image: url(images/tom1.png);
 
 }
 
 .a {
-
+background-image: url(images/tom2.png);
 }
 
 .s {
-
+background-image: url(images/tom3.png);
 }
 
 .d {
-
+ background-image: url(images/tom4.png);
 }
-
 .j {
-
+ background-image: url(images/crash.png);
+ 
 }
 
 .k {
+  background-image: url(images/snare.png);
 
 }
 
 .l {
-
+background-image: url(images/kick.png);
 }
+
 
 .set {
   margin: 10% auto;
